# LLD

ParkingLotSystem/: CMakeLists.txt
ParkingLotSystem/include/: FarthestFirst.h  FlatPayment.h  NearestFirst.h  ParkingFloor.h  ParkingLotSystem.h  ParkingSpot.h  ParkingStrategy.h  ParkingStrategyContext.h  PaymentStrategy.h  PaymentStrategyContext.h  SpotManager.h  Ticket.h  TicketManager.h  Types.h  Vehicle.h  VehicleBasedPayment.h
ParkingLotSystem/src/: FarthestFirst.cpp  NearestFirst.cpp  ParkingLotSystem.cpp  SpotManager.cpp  TicketManager.cpp  main.cpp
